--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -1,5 +1,15 @@
-<div class="row-fluid">
-    <div class="span7">
+<#include "sidebar.html" />   
+
+<div class="row">
+
+    <div class="span3">             
+        <@sidebar step="administration" />
+        <div class="portlet-background-content">         
+            #i18n{pluginwizard.pluginwizard_create_admin_feature.pageHelp}      
+        </div>  
+    </div>
+
+    <div class="span8">
         <form class="form form-horizontal well" method="post" name="generate" > 
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_create_admin_feature.pageTitle}</legend>                           
@@ -58,22 +68,5 @@
                     </button>	     
                 </div>  
         </form>
-    </div>
-
-    <div class="span4">             
-        <div class="portlet-background-header -lutece-border-radius-top">#i18n{pluginwizard.pluginwizard_create_plugin.labelInformation}      
-        </div>               
-        <ul>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}</li>
-            <li><img src="images/local/skin/buttons/show.png">#i18n{pluginwizard.pluginwizard_create_plugin_application.labelFeaturesStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelBusinessStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelXPageStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelPortletsStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelGenerateStep}</li>       
-        </ul>               
-        <div class="portlet-background-content">         
-            #i18n{pluginwizard.pluginwizard_create_admin_feature.pageHelp}      
-        </div>  
     </div>
 </div>
