--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -1,6 +1,12 @@
-   
+<#include "sidebar.html" />   
+
 <div class="row">
-    <div class="span7">
+    <div class="span3" > 
+        <@sidebar step="creation" />
+        <div class="help-block">#i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}</div>
+    </div>
+    
+    <div class="span8">
         <form class="form" method="post" name="generate" >               
              <div class="well">		 		
             <legend>#i18n{pluginwizard.pluginwizard_create_plugin.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   #i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}
@@ -61,18 +67,5 @@
             </div>		
         </form>		 		
     </div>		 		
-    <div class="span4" >       
-        <ul class="unstyled" >
-            <li class="label label-info"><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}</h5></li>
-            <li class="muted"><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}</h5></li>
-            <li class="muted"> &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelFeaturesStep}</li>
-            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelBusinessStep}</h5></li>
-            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelXPageStep}</h5></li>
-            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelPortletsStep}</h5></li>
-            <li><h5> &nbsp; &nbsp;#i18n{pluginwizard.pluginwizard_create_plugin_application.labelGenerateStep}</h5></li>       
-        </ul>        
-        <div class="portlet-background-content">#i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}
-        </div>
-    </div>
 </div>
 
