--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -1,5 +1,15 @@
-<div class="row-fluid">   
-    <div class="span7">
+<#include "sidebar.html" />   
+
+<div class="row-fluid"> 
+    
+    <div class="span3">       
+        <@sidebar step="description" />
+        <div class="help-block">
+            #i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
+        </div>
+    </div>
+    
+    <div class="span8">
         <form class="form form-horizontal well" method="post" name="generate" action="jsp/site/Portal.jsp" >    
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   #i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}
@@ -9,7 +19,7 @@
                 <input type="hidden" name="action" value="do_modify_plugin_description" />                  
                 <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" />                                                                                                   
                 <div class="control-group">
-                    <label class="control-label" for="package">                         	            	                        
+                    <label class="control-label">                         	            	                        
                         #i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName} :
                     </label>       
                     <div class="controls">                
@@ -120,19 +130,4 @@
             </fieldset>
         </form>		 		
     </div>		 		
-    <div class="span4">       
-        <div class="portlet-background-header -lutece-border-radius-top">#i18n{pluginwizard.pluginwizard_create_plugin.labelInformation}
-        </div>         
-        <ul>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}</li>
-            <li><img src="images/local/skin/buttons/show.png">#i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelFeaturesStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelBusinessStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelXPageStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelPortletsStep}</li>
-            <li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelGenerateStep}</li>       
-        </ul>       
-        <div class="portlet-background-content">      
-            #i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
-        </div>
-    </div>
+</div>
